--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
-  text-align: center;
+    background-color: #f6f6f6;
+    width : 100vw ;
+    height : 100vh ; 
+    text-align: center ;
+    padding-top: 20px ;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ccc ; 
+    color : #444 ;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.add-contact {
+    display: flex  ;
+    flex-direction: column ;
+    align-items: center ;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.contact-list {
+    display: flex ;
+    flex-direction: column ;
+    align-items: center ;
 }
-
-.App-link {
-  color: #61dafb;
+a.add , a.list {
+    text-decoration: none ;
+    display: block ;
+    color : #fff ;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-link {
+    all : unset ;
+    font-weight: bold ;
+    border-radius: 5px ;
+    margin-top: 20px;
+    color: #fff ;
+    background: #7c3aed;
 }
