--- a/src/Components/ContactList/ContactList.css
+++ b/src/Components/ContactList/ContactList.css
@@ -9,13 +9,13 @@
     border-radius: 5px ;
     margin-top: 20px;
 }
-.item button {
-    all: unset ;
+.item .btn-delete {
     cursor: pointer;
     border: 1px solid #b91c1c ;
     color : #b91c1c ;
     border-radius: 5px ;
-    padding: 5px 10px ;
+    padding: 7px 10px ;
+    background-color: #fff;
 }
 .item img {
     width: 70px ;
@@ -31,5 +31,17 @@
     align-items: flex-start;
 }
 .add {
-    padding: 10px 15px ;
+    font-weight: bold ;
+    border-radius: 5px ;
+    color: #fff ;
+    background: #7c3aed;
+    padding: 8px 10px ;
+}
+.list-header {
+    display: flex ;
+    justify-content: space-between ;
+    align-items: center ;
+    width: 50% ;
+    margin-top: 20px;
+    padding: 0 20px ;
 }
